--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 ASUS ZenPad 3 8.0 is a premium 8-inch tablet with vivid 2K (2048 x 1536 resolution) visuals and cinematic audio for truly immersive entertainment. Its fashion-inspired design with a brushed metallic finish and detailed concentric-circle button provides a sublime level of elegance and beauty, while a super-fast hexa-core processor and 4GB RAM delivers powerful performance in any usage scenario. Coupled with the all-new ZenUI 3.0 interface with added intelligence, ZenPad 3 8.0 delivers an incredible tablet experience like no other.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="tab.jpg" alt="">
+                    <img class="img-responsive" src="Tab.jpg" alt="">
                 </div>
             </div>
 
@@ -156,7 +156,7 @@ ASUS ZenPad 3 8.0 is a premium 8-inch tablet with vivid 2K (2048 x 1536 resoluti
                     <p class="lead">INSPIRING<br>INNOVATION<br>PRESISTENT<br>PERFECTION</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="LT.jpg" alt="">
+                    <img class="img-responsive" src="LT.jpeg" alt="">
                 </div>
             </div>
 
@@ -173,7 +173,7 @@ ASUS ZenPad 3 8.0 is a premium 8-inch tablet with vivid 2K (2048 x 1536 resoluti
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                    <h2>ASUS </h2>
                 </div>
                 <div class="col-lg-6">
                     
